# hap

./: .gitignore  .gitmodules  .project.vim  CMakeLists.txt  Makefile  README.md  circle.yml
include/: hap.h  kro.h
include/hap/: compatibility.h  typedefs.h  vector.h
src/: config.c  engine.c  entry.c  hash_table.c  hash_table.h  hashes.c  hashes.h  logging.c  logging.h  main.c  module.c  module.h  symbols.c  tags.c  timer.c  timer.h  vector.c
src/cmds/: hap.c  kro.c
src/lib/: hap_example.c  hap_example.h  kro.c  kro_example.c  kro_example.h
src/lib/audio_openal/: CMakeLists.txt
src/lib/audio_openal/src/: audio_openal.c
src/lib/example/: CMakeLists.txt  hap_example.c  hap_example.h
