CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT (hap_audio_openal)


FIND_PACKAGE(OpenAL REQUIRED)
LINK_DIRECTORIES(${OPENAL_INCLUDE_DIR})
IF(NOT OpenAL_FOUND)
    MESSAGE(FATAL_ERROR "OpenAL must be available in order to build this module.")
ENDIF(NOT OpenAL_FOUND)


FILE(GLOB AUDIO_OPENAL_SOURCES src/*.c)
ADD_LIBRARY(hap_audio_openal SHARED ${AUDIO_OPENAL_SOURCES})


TARGET_LINK_LIBRARIES(hap_audio_openal
  ${OPENAL_LIBRARY}
)
